try fix problem with snap align to on page

--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ a {
 
 .page-header {
   left: 0;
+  scroll-snap-align: start;
   position: sticky;
   z-index: 1000;
 }
